# mpiaa_rgz

./: CMakeLists.txt  README.md  main.cpp
gui/: scene.cpp  scene.h
images/: example.webm
model/graph/: graph.h  shortest_path.cpp  shortest_path.h
samples/: config1.json  config2.json
